--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -37,7 +37,7 @@
                         <th style="width: 157px; text-align: center;"><a href="/saved">Save point</a></th>
                         <th style="width: 157px; text-align: center;"><a href="/help">Manual</a></th>
                     </tr>
-                <table>
+                </table>
             </div>
             <br>
             <br>
