--- a/views/show.ejs
+++ b/views/show.ejs
@@ -77,40 +77,40 @@
     <% if(pagecontents.choice.length > 0) { %>
         <% if(pagecontents.choice.length === 1) { %>
             <div id="choice" style="top: 390px;">
-                <a href="/nodvel/<%= title %>/<%= pagecontents.choice[0].nextDivergence %>/<%= pagecontents.choice[0].nextPage %>?prevDivergence=<%= pagecontents.divergence %>&prevPage=<%= pagecontents.page %>&prev2Divergence=<%= prevDivergence %>&prev2Page=<%= prevPage %>"><%= pagecontents.choice[0].text %></a>
+                <a href="/nodvel/<%= title %>/<%= pagecontents.choice[0].nextDivergence %>/<%= pagecontents.choice[0].nextPage %>"><%= pagecontents.choice[0].text %></a>
             </div>
         <% } %>
         <% if(pagecontents.choice.length === 2) { %>
             <div id="choice" style="top: 220px;">
-                <a href="/nodvel/<%= title %>/<%= pagecontents.choice[0].nextDivergence %>/<%= pagecontents.choice[0].nextPage %>?prevDivergence=<%= pagecontents.divergence %>&prevPage=<%= pagecontents.page %>&prev2Divergence=<%= prevDivergence %>&prev2Page=<%= prevPage %>"><%= pagecontents.choice[0].text %></a>
+                <a href="/nodvel/<%= title %>/<%= pagecontents.choice[0].nextDivergence %>/<%= pagecontents.choice[0].nextPage %>"><%= pagecontents.choice[0].text %></a>
             </div>
             <div id="choice" style="top: 420px">
-                <a href="/nodvel/<%= title %>/<%= pagecontents.choice[1].nextDivergence %>/<%= pagecontents.choice[1].nextPage %>?prevDivergence=<%= pagecontents.divergence %>&prevPage=<%= pagecontents.page %>&prev2Divergence=<%= prevDivergence %>&prev2Page=<%= prevPage %>"><%= pagecontents.choice[1].text %></a>
+                <a href="/nodvel/<%= title %>/<%= pagecontents.choice[1].nextDivergence %>/<%= pagecontents.choice[1].nextPage %>"><%= pagecontents.choice[1].text %></a>
             </div>
         <% } %>
         <% if(pagecontents.choice.length === 3) { %>
             <div id="choice" style="top: 100px">
-                <a href="/nodvel/<%= title %>/<%= pagecontents.choice[0].nextDivergence %>/<%= pagecontents.choice[0].nextPage %>?prevDivergence=<%= pagecontents.divergence %>&prevPage=<%= pagecontents.page %>&prev2Divergence=<%= prevDivergence %>&prev2Page=<%= prevPage %>"><%= pagecontents.choice[0].text %></a>
+                <a href="/nodvel/<%= title %>/<%= pagecontents.choice[0].nextDivergence %>/<%= pagecontents.choice[0].nextPage %>"><%= pagecontents.choice[0].text %></a>
             </div>
             <div id="choice" style="top: 300px">
-                <a href="/nodvel/<%= title %>/<%= pagecontents.choice[1].nextDivergence %>/<%= pagecontents.choice[1].nextPage %>?prevDivergence=<%= pagecontents.divergence %>&prevPage=<%= pagecontents.page %>&prev2Divergence=<%= prevDivergence %>&prev2Page=<%= prevPage %>"><%= pagecontents.choice[1].text %></a>
+                <a href="/nodvel/<%= title %>/<%= pagecontents.choice[1].nextDivergence %>/<%= pagecontents.choice[1].nextPage %>"><%= pagecontents.choice[1].text %></a>
             </div>
             <div id="choice" style="top: 500px">
-                <a href="/nodvel/<%= title %>/<%= pagecontents.choice[2].nextDivergence %>/<%= pagecontents.choice[2].nextPage %>?prevDivergence=<%= pagecontents.divergence %>&prevPage=<%= pagecontents.page %>&prev2Divergence=<%= prevDivergence %>&prev2Page=<%= prevPage %>"><%= pagecontents.choice[2].text %></a>
+                <a href="/nodvel/<%= title %>/<%= pagecontents.choice[2].nextDivergence %>/<%= pagecontents.choice[2].nextPage %>"><%= pagecontents.choice[2].text %></a>
             </div>
         <% } %>
         <% if(pagecontents.choice.length === 4) { %>
             <div id="choice" style="top: 50px">
-                <a href="/nodvel/<%= title %>/<%= pagecontents.choice[0].nextDivergence %>/<%= pagecontents.choice[0].nextPage %>?prevDivergence=<%= pagecontents.divergence %>&prevPage=<%= pagecontents.page %>&prev2Divergence=<%= prevDivergence %>&prev2Page=<%= prevPage %>"><%= pagecontents.choice[0].text %></a>
+                <a href="/nodvel/<%= title %>/<%= pagecontents.choice[0].nextDivergence %>/<%= pagecontents.choice[0].nextPage %>"><%= pagecontents.choice[0].text %></a>
             </div>
             <div id="choice" style="top: 250px">
-                <a href="/nodvel/<%= title %>/<%= pagecontents.choice[1].nextDivergence %>/<%= pagecontents.choice[1].nextPage %>?prevDivergence=<%= pagecontents.divergence %>&prevPage=<%= pagecontents.page %>&prev2Divergence=<%= prevDivergence %>&prev2Page=<%= prevPage %>"><%= pagecontents.choice[1].text %></a>
+                <a href="/nodvel/<%= title %>/<%= pagecontents.choice[1].nextDivergence %>/<%= pagecontents.choice[1].nextPage %>"><%= pagecontents.choice[1].text %></a>
             </div>
             <div id="choice" style="top: 450px">
-                <a href="/nodvel/<%= title %>/<%= pagecontents.choice[2].nextDivergence %>/<%= pagecontents.choice[2].nextPage %>?prevDivergence=<%= pagecontents.divergence %>&prevPage=<%= pagecontents.page %>&prev2Divergence=<%= prevDivergence %>&prev2Page=<%= prevPage %>"><%= pagecontents.choice[2].text %></a>
+                <a href="/nodvel/<%= title %>/<%= pagecontents.choice[2].nextDivergence %>/<%= pagecontents.choice[2].nextPage %>"><%= pagecontents.choice[2].text %></a>
             </div>
             <div id="choice" style="top: 650px">
-                <a href="/nodvel/<%= title %>/<%= pagecontents.choice[3].nextDivergence %>/<%= pagecontents.choice[3].nextPage %>?prevDivergence=<%= pagecontents.divergence %>&prevPage=<%= pagecontents.page %>&prev2Divergence=<%= prevDivergence %>&prev2Page=<%= prevPage %>"><%= pagecontents.choice[3].text %></a>
+                <a href="/nodvel/<%= title %>/<%= pagecontents.choice[3].nextDivergence %>/<%= pagecontents.choice[3].nextPage %>"><%= pagecontents.choice[3].text %></a>
             </div>
         <% } %>
     <% } %>
@@ -122,10 +122,19 @@
 </div>
 <div class="container">
     <hr>
-    <% if(prevDivergence) { %>
-        <a href="/nodvel/<%= title %>/<%= prevDivergence %>/<%= prevPage %>?prevDivergence=<%= prev2Divergence %>&prevPage=<%= prev2Page %>" style="float: left;">Prev</a>
+    <% if(prev.length > 0) { %>
+        <form method="post" action="/nodvel/prev/<% title %>">
+            <select name="prev" style="float: left;" class >
+                <% prev.forEach(function(item) { %>
+                    <option value="/nodvel/<%= title %>/<%= item.divergence %>/<%= item.page %>">Divergence: <%= item.divergence %> Page: <%= item.page %></option>
+                <% }) %>
+            </select>
+            <input type="submit" value="prev" style="float: left;" class="btn btn-primary">
+        </form>
     <% } %>
-    <a href="/nodvel/<%= title %>/<%= pagecontents.nextDivergence %>/<%= pagecontents.nextPage %>?prevDivergence=<%= pagecontents.divergence %>&prevPage=<%= pagecontents.page %>&prev2Divergence=<%= prevDivergence %>&prev2Page=<%= prevPage %>" style="float: right;">Next</a>
+    <% if(nextDivergence) { %>
+        <a href="/nodvel/<%= title %>/<%= pagecontents.nextDivergence %>/<%= pagecontents.nextPage %>" style="float: right;">Next</a>
+    <% } %>
     <hr>
     <form method="post" action="/nodvel/save/<% title %>/<% pagecontents.divergence %>/<% pagecontents.page %>">
         <select name="save" style="display: none;">
