add delete part

--- a/views/writed.ejs
+++ b/views/writed.ejs
@@ -78,6 +78,7 @@
 <br>
 <hr>
 <a href="/writenodvel/rewrite/<%= contents.title %>/<%= pagecontents.divergence %>/<%= pagecontents.page %>" class="btn btn-primary" style="float: left;">Rewrite</a>
+<a href="/writenodvel/delete/<%= contents.title %>/<%= pagecontents.divergence %>/<%= pagecontents.page %>" class="btn btn-info" style="float: left;">Delete</a>
 <a href="/nodvel/<%= contents.title %>" style="float: right;" class="btn btn-primary">Main page</a>
 <br>
 <br>
