--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,8 +6,8 @@
     <input name="username" type="text" class="form-control" placeholder="Username" required autofocus>
     <input name="password" type="password" class="form-control" placeholder="Password" required>
 	<br>
-    <input type="submit" value="Log in" class="btn btn-default pull-right">
-	<a href="/" class="btn btn-default pull-left">Cancel</a>
+    <input type="submit" value="Log in" class="btn btn-primary pull-right">
+	<a href="/" class="btn btn-info pull-left">Cancel</a>
 </form>
 
 <% include _footer %>
