--- a/views/writenodvel.ejs
+++ b/views/writenodvel.ejs
@@ -21,8 +21,9 @@
 		<option value="General">General</option>
 	</select>
 	<br>
-    <input type="submit" value="Next" class="btn btn-default pull-right">
-	<a href="/" class="btn btn-default pull-left">Cancel</a>
+	<br>
+    <input type="submit" value="Next" class="btn btn-primary pull-right">
+	<a href="/" class="btn btn-info pull-left">Cancel</a>
 </form>
 
 <% include _footer %>
