some css change

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,4 +1,4 @@
-﻿<% include _header %>
+<% include _header %>
 
 <h1>Sign up</h1>
 <hr>
@@ -9,8 +9,8 @@
 	<p>If you don't confirm your password, will be back this page.</p> 
 	<input name="confirmpassword" type="password" class="form-control" placeholder="Confrim Password" required>
 	<br>
-    <input type="submit" value="Sign up" class="btn btn-default pull-right">
-	<a href="/" class="btn btn-default pull-left">Cancel</a>
+    <input type="submit" value="Sign up" class="btn btn-primary pull-right">
+	<a href="/" class="btn btn-info pull-left">Cancel</a>
 </form>
 
 <% include _footer %>
