divide writing and rewriting part

--- a/views/writing.ejs
+++ b/views/writing.ejs
@@ -4,25 +4,14 @@
 <br>
 <hr>
 <br>
-<% if(pagecontents) { %>
-    <form method="post" action="/writenodvel/rewrite/<%= contents.title %>">
-<% } else { %>
-    <form method="post" action="/writenodvel/<%= contents.title %>">
-<% } %>
+<form method="post" action="/writenodvel/<%= contents.title %>">
     <h3>Paging part</h3>
     <p>Paging part is must be fullfilled.</p>
     <br>
-    <% if(pagecontents) { %> 
-        <label>Divergence: <input type="text" class="form-control" name="divergence" value="<%= pagecontents.divergence %>" required></label>
-        <label>Page: <input type="text" class="form-control" name="page" value="<%= pagecontents.page %>" required></label>
-        <label>Next Divergence: <input type="text" class="form-control" name="nextDivergence" value="<%= pagecontents.nextDivergence %>"></label>
-        <label>Next Page: <input type="text" class="form-control" name="nextPage" value="<%= pagecontents.nextPage %>"></label>
-    <% } else { %>
-        <label>Divergence: <input type="text" class="form-control" name="divergence" value="<%= divergence %>" required></label>
-        <label>Page: <input type="text" class="form-control" name="page" value="<%= page %>" required></label>
-        <label>Next Divergence: <input type="text" class="form-control" name="nextDivergence"></label>
-        <label>Next Page: <input type="text" class="form-control" name="nextPage"></label>
-    <% } %>
+    <label>Divergence: <input type="number" class="form-control" name="divergence" value="<%= divergence %>" required></label>
+    <label>Page: <input type="number" class="form-control" name="page" value="<%= page %>" required></label>
+    <label>Next Divergence: <input type="number" class="form-control" name="nextDivergence"></label>
+    <label>Next Page: <input type="number" class="form-control" name="nextPage"></label>
     <hr>
     <br>
     <h2>Text part</h2>
@@ -30,38 +19,13 @@
     <p>And, in choice, you must write Divergence and Page. Mind this.</p>
     <br>
     <h3>Text</h3>
-    <% if(pagecontents && pagecontents.text) { %> 
-        <input type="text" class="form-control" style="width: 1100px; height: 100px;" name="text" value="<%= pagecontents.text %>"></input>
-    <% } else { %>
-        <input type="text" class="form-control" style="width: 1100px; height: 100px;" name="text" placeholder="Mind the name of character!"></input> 
-    <% } %>
+    <input type="text" class="form-control" style="width: 1100px; height: 100px;" name="text" placeholder="Mind the name of character!"></input> 
     <br>
     <h3>Choice</h3>
-    <% if(pagecontents && pagecontents.choice.length > 0) { %> 
-        <% for(let i = 0; i < 4; i++) { %>
-            <% if(pagecontents.choice[i]) { %> 
-                <label>Choice <%= (i + 1) %>: <input type="text" class="form-control" style="width: 1100px; height: 100px;" name="choice<%= (i + 1) %>text" value="<%= pagecontents.choice[i].text %>"></label>
-                <label>Choice <%= (i + 1) %> Divergence: <input type="text" class="form-control" name="choice<%= (i + 1) %>nextDivergence" value="<%= pagecontents.choice[i].nextDivergence %>"></label>
-                <label>Choice <%= (i + 1) %> Page: <input type="text" class="form-control" name="choice<%= (i + 1) %>nextPage" value="<%= pagecontents.choice[i].nextPage %>"></label>
-            <% } else { %>
-                <label>Choice <%= (i + 1) %>: <input type="text" class="form-control" style="width: 1100px; height: 100px;" name="choice<%= (i + 1) %>text" placeholder="Choice"></label>
-                <label>Choice <%= (i + 1) %> Divergence: <input type="text" class="form-control" name="choice<%= (i + 1) %>nextDivergence" placeholder="Path to next page"></label>
-                <label>Choice <%= (i + 1) %> Page: <input type="text" class="form-control" name="choice<%= (i + 1) %>nextPage" placeholder="Path to next page"></label>
-            <% } %>
-        <% } %>
-    <% } else { %>
-        <label>Choice 1: <input type="text" class="form-control" style="width: 1100px; height: 100px;" name="choice1text" placeholder="Choice"></label>
-        <label>Choice 1 Divergence: <input type="text" class="form-control" name="choice1nextDivergence" placeholder="Path to next page"></label>
-        <label>Choice 1 Page: <input type="text" class="form-control" name="choice1nextPage" placeholder="Path to next page"></label>
-        <label>Choice 2: <input type="text" class="form-control" style="width: 1100px; height: 100px;" name="choice2text" placeholder="Choice"></label>
-        <label>Choice 2 Divergence: <input type="text" class="form-control" name="choice2nextDivergence" placeholder="Path to next page"></label>
-        <label>Choice 2 Page: <input type="text" class="form-control" name="choice2nextPage" placeholder="Path to next page"></label>
-        <label>Choice 3: <input type="text" class="form-control" style="width: 1100px; height: 100px;" name="choice3text" placeholder="Choice"></label>
-        <label>Choice 3 Divergence: <input type="text" class="form-control" name="choice3nextDivergence" placeholder="Path to next page"></label>
-        <label>Choice 3 Page: <input type="text" class="form-control" name="choice3nextPage" placeholder="Path to next page"></label>
-        <label>Choice 4: <input type="text" class="form-control" style="width: 1100px; height: 100px;" name="choice4text" placeholder="Choice"></label>
-        <label>Choice 4 Divergence: <input type="text" class="form-control" name="choice4nextDivergence" placeholder="Path to next page"></label>
-        <label>Choice 4 Page: <input type="text" class="form-control" name="choice4nextPage" placeholder="Path to next page"></label>
+    <% for(let i = 0; i < 4; i++) { %>
+        <label>Choice <%= (i + 1) %>: <input type="text" class="form-control" style="width: 1100px; height: 100px;" name="choice<%= (i + 1) %>text" placeholder="Choice"></label>
+        <label>Choice <%= (i + 1) %> Divergence: <input type="number" class="form-control" name="choice<%= (i + 1) %>nextDivergence" placeholder="Path to next page"></label>
+        <label>Choice <%= (i + 1) %> Page: <input type="number" class="form-control" name="choice<%= (i + 1) %>nextPage" placeholder="Path to next page"></label>
     <% } %>
     <hr>
     <br>
@@ -122,25 +86,24 @@
         </select>
     </div>
     <br>
+    <hr>
+    <h2>MEMO</h2>
+    <input type="text" class="form-control" style="width: 1100px; height: 100px;" name="memo" placeholder="Do memo for this page"></input>
+    <br>
+    <br>
     <input type="submit" class="btn btn-primary" style="float: right;" value="Save">
-    <% if(pagecontents) { %>
-        <a href="/writeNodvel/<%= contents.title %>/<%= pagecontents.divergence %>/<%= pagecontents.page %>" style="float: left;" class="btn btn-primary">Cancel</a>
-        <br>
-        <br>
-    <% } else { %>
-        <br>
-        <br>
-        <hr>
-        <br>
-        <% let i = (page * 1) + 1 %>
-        <a href="/writeNodvel/<%= contents.title %>/<%= divergence %>/<%= i %>" style="float: right;" class="btn btn-primary">Next page</a>
-        <a href="/nodvel/<%= contents.title %>" class="btn btn-info">Main page</a>
-        <% if(page - 1 > 0) { %>
-            <a href="/writeNodvel/<%= contents.title %>/<%= divergence %>/<%= (page - 1) %>" style="float: left;" class="btn btn-primary">Prev page</a>
-        <% } %>
-        <br>
-        <br>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <% let i = (page * 1) + 1 %>
+    <a href="/writeNodvel/<%= contents.title %>/<%= divergence %>/<%= i %>" style="float: right;" class="btn btn-primary">Next page</a>
+    <a href="/nodvel/<%= contents.title %>" class="btn btn-info">Main page</a>
+    <% if(page - 1 > 0) { %>
+        <a href="/writeNodvel/<%= contents.title %>/<%= divergence %>/<%= (page - 1) %>" style="float: left;" class="btn btn-primary">Prev page</a>
     <% } %>
+    <br>
+    <br>
 </form>
 <br>
 
