some css change

--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -6,7 +6,7 @@
         <option value="character" selected>character</option>
     </select>
     <input type="file" class="filestyle" accept=".jpeg, .jpg, .png" style="float: left;" required>
-    <input type="submit" class="btn btn-default" style="float: left;">
+    <input type="submit" class="btn btn-info" style="float: left;">
 </form>
 <br>
 <hr>
@@ -28,7 +28,7 @@
         <option value="background" selected>background</option>
     </select>
     <input type="file" class="filestyle" accept=".jpeg, .jpg, .png" style="float: left;" required>
-    <input type="submit" class="btn btn-default" style="float: left;">
+    <input type="submit" class="btn btn-info" style="float: left;">
 </form>
 <br>
 <hr>
@@ -43,6 +43,6 @@
 <% } %>
 </ul>
 <br>
-<a href="/writenodvel/<%= contents.title %>/1/1" class="btn btn-default">Go to write</a>
+<a href="/writenodvel/<%= contents.title %>/1/1" class="btn btn-primary">Go to write</a>
 
 <% include _footer %>
