--- a/views/writed.ejs
+++ b/views/writed.ejs
@@ -87,8 +87,9 @@
 <br>
 <hr>
 <a href="/writenodvel/rewrite/<%= contents.title %>/<%= pagecontents.divergence %>/<%= pagecontents.page %>" class="btn btn-primary" style="float: left;">Rewrite</a>
-<a href="/writenodvel/delete/<%= contents.title %>/<%= pagecontents.divergence %>/<%= pagecontents.page %>" class="btn btn-info" style="float: left;">Delete</a>
+<a href="/writenodvel/delete/<%= contents.title %>/<%= pagecontents.divergence %>/<%= pagecontents.page %>" class="btn btn-info" style="float: left; color: red;">Delete</a>
 <a href="/nodvel/<%= contents.title %>" style="float: right;" class="btn btn-primary">Main page</a>
+<a href="/writenodvel/upload/<%= contents.title %>" class="btn btn-info" style="float: right;">Upload</a> 
 <br>
 <br>
 <br>
