add upload a tag

--- a/views/writing.ejs
+++ b/views/writing.ejs
@@ -91,6 +91,7 @@
     <input type="text" class="form-control" style="width: 1100px; height: 100px;" name="memo" placeholder="Do memo for this page"></input>
     <br>
     <br>
+    <a href="/writenodvel/upload/<%= contents.title %>" class="btn btn-primary" style="float: left;">Upload</a>
     <input type="submit" class="btn btn-primary" style="float: right;" value="Save">
     <br>
     <br>
