add include _move

--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -44,5 +44,10 @@
 </ul>
 <br>
 <a href="/writenodvel/<%= contents.title %>/1/1" class="btn btn-primary">Go to write</a>
+<br>
+<br>
+<hr>
+
+<% include _move %>
 
 <% include _footer %>
