--- a/views/writing.ejs
+++ b/views/writing.ejs
@@ -23,9 +23,10 @@
     <br>
     <h3>Choice</h3>
     <% for(let i = 0; i < 4; i++) { %>
-        <label>Choice <%= (i + 1) %>: <input type="text" class="form-control" style="width: 1100px; height: 100px;" name="choice<%= (i + 1) %>text" placeholder="Choice"></label>
+        <label>Choice <%= (i + 1) %>: <input type="text" class="form-control" style="width: 1100px; height: 100px;" name="choice<%= (i + 1) %>Text" placeholder="Choice text"></label>
         <label>Choice <%= (i + 1) %> Divergence: <input type="number" class="form-control" name="choice<%= (i + 1) %>nextDivergence" placeholder="Path to next page"></label>
         <label>Choice <%= (i + 1) %> Page: <input type="number" class="form-control" name="choice<%= (i + 1) %>nextPage" placeholder="Path to next page"></label>
+        <hr>
     <% } %>
     <hr>
     <br>
