--- a/views/searchnodvel.ejs
+++ b/views/searchnodvel.ejs
@@ -1,60 +1,62 @@
 <% include _header %>
 
 <h2>Page list of <%= title %></h2>
-<table style="table-layout: auto; height: 900px; width: 1100px; overflow: auto;" class="table table-striped">
-    <thead>
-        <tr>
-            <th style="width: 60px;">Count</th>
-            <th style="width: 50px;">Page</th>
-            <th style="width: 50px;">Divergence</th>
-            <th style="width: 300px;">Text</th>
-            <th style="width: 300px;">Memo</th>
-            <th style="width: 60px;">Link</th>
-        </tr>
-    </thead>>
-    <tbody>
-        <% if(pagecontents.length > 0) { %>
-            <% let i = 0; %>
-            <% pagecontents.forEach(function(item) { %>
-                <% i++ %>
+    <div id="none" style="height: 800px; overflow: auto;">
+        <table style="table-layout: auto;" class="table table-striped">
+            <thead>
                 <tr>
-                    <td><%= i %></td>
-                    <td><%= item.page %></td>
-                    <td><%= item.divergence %></td>
-                    <% if(item.text) { %>
-                        <td style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"><%= item.text %></td>
-                    <% } else if(item.choice.length > 0) { %>
-                        <td style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"><%= item.choice[0] %></td>
-                    <% } else { %>
-                        <td>No text</td>
-                    <% } %>
-                    <% if(item.memo) { %>
-                        <td style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"><%= item.memo %></td>
-                    <% } else { %>
-                        <td >No memo</td>
-                    <% } %>
-                    <% if(contents.ended) { %>
-                        <td><a href="/nodvel/<%= contents.title %>/<%= item.divergence %>/<%= item.page %>">Go</a></td>
-                    <% } else { %>
-                        <td><a href="/writenodvel/<%= contents.title %>/<%= item.divergence %>/<%= item.page %>">Go</a></td>
-                    <% } %>
+                    <th style="width: 60px;">Count</th>
+                    <th style="width: 50px;">Divergence</th>
+                    <th style="width: 50px;">Page</th>
+                    <th style="width: 300px;">Text</th>
+                    <th style="width: 300px;">Memo</th>
+                    <th style="width: 60px;">Link</th>
                 </tr>
-            <% }) %>
-        <% } else { %>
-            <tr>
-                <td colspan="6">No contents</td>
-            </tr>
-        <% } %>
-    </tbody>
-</table>
-<br>
-<hr>
-<form action="/writenodvel/search/<%= contents.title %>" method="post">
-    <input type="text" class="form-control" placeholder="Search in memo or text" name="searchWord" style="width: 900px; float: left;" required>
-    <input type="submit" value="Search" class="btn btn-primary" style="float: left;">
-</form>
-<br>
-<br>
+            </thead>
+            <tbody>
+                <% if(pagecontents.length > 0) { %>
+                    <% let i = 0; %>
+                    <% pagecontents.forEach(function(item) { %>
+                        <% i++ %>
+                        <tr>
+                            <td><%= i %></td>
+                            <td><%= item.divergence %></td>
+                            <td><%= item.page %></td>
+                            <% if(item.text) { %>
+                                <td style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"><%= item.text %></td>
+                            <% } else if(item.choice.length > 0) { %>
+                                <td style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"><%= item.choice[0].text %></td>
+                            <% } else { %>
+                                <td>No text</td>
+                            <% } %>
+                            <% if(item.memo) { %>
+                                <td style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"><%= item.memo %></td>
+                            <% } else { %>
+                                <td >No memo</td>
+                            <% } %>
+                            <% if(contents.ended) { %>
+                                <td><a href="/nodvel/<%= contents.title %>/<%= item.divergence %>/<%= item.page %>">Go</a></td>
+                            <% } else { %>
+                                <td><a href="/writenodvel/<%= contents.title %>/<%= item.divergence %>/<%= item.page %>">Go</a></td>
+                            <% } %>
+                        </tr>
+                    <% }) %>
+                <% } else { %>
+                    <tr>
+                        <td colspan="6">No contents</td>
+                    </tr>
+                <% } %>
+            </tbody>
+        </table>
+    </div>
+    <br>
+    <hr>
+    <form action="/writenodvel/search/<%= contents.title %>" method="post">
+        <input type="text" class="form-control" placeholder="Search in memo or text" name="searchWord" style="width: 900px; float: left;" required>
+        <input type="submit" value="Search" class="btn btn-primary" style="float: left;">
+    </form>
+    <br>
+    <br>
 
 <% include _move %>
 
