--- a/views/rewriting.ejs
+++ b/views/rewriting.ejs
@@ -29,12 +29,12 @@
     <% if(pagecontents && pagecontents.choice.length > 0) { %> 
         <% for(let i = 0; i < 4; i++) { %>
             <% if(pagecontents.choice[i]) { %> 
-                <label>Choice <%= (i + 1) %>: <input type="text" class="form-control" style="width: 1100px; height: 100px;" name="choice<%= (i + 1) %>text" value="<%= pagecontents.choice[i].text %>"></label>
+                <label>Choice <%= (i + 1) %>: <input type="text" class="form-control" style="width: 1100px; height: 100px;" name="choice<%= (i + 1) %>Text" value="<%= pagecontents.choice[i].text %>"></label>
                 <label>Choice <%= (i + 1) %> Divergence: <input type="number" class="form-control" name="choice<%= (i + 1) %>nextDivergence" value="<%= pagecontents.choice[i].nextDivergence %>"></label>
                 <label>Choice <%= (i + 1) %> Page: <input type="number" class="form-control" name="choice<%= (i + 1) %>nextPage" value="<%= pagecontents.choice[i].nextPage %>"></label>
                 <hr>
             <% } else { %>
-                <label>Choice <%= (i + 1) %>: <input type="text" class="form-control" style="width: 1100px; height: 100px;" name="choice<%= (i + 1) %>text" placeholder="Choice"></label>
+                <label>Choice <%= (i + 1) %>: <input type="text" class="form-control" style="width: 1100px; height: 100px;" name="choice<%= (i + 1) %>Text" placeholder="Choice"></label>
                 <label>Choice <%= (i + 1) %> Divergence: <input type="number" class="form-control" name="choice<%= (i + 1) %>nextDivergence" placeholder="Path to next page"></label>
                 <label>Choice <%= (i + 1) %> Page: <input type="number" class="form-control" name="choice<%= (i + 1) %>nextPage" placeholder="Path to next page"></label>
                 <hr>
@@ -43,7 +43,7 @@
     <%} else { %>
         <p>There's any choice contents in this page.</p>
         <% for(let i = 0; i < 4; i++) { %>
-            <label>Choice <%= (i + 1) %>: <input type="text" class="form-control" style="width: 1100px; height: 100px;" name="choice<%= (i + 1) %>text" placeholder="Choice"></label>
+            <label>Choice <%= (i + 1) %>: <input type="text" class="form-control" style="width: 1100px; height: 100px;" name="choice<%= (i + 1) %>Text" placeholder="Choice"></label>
             <label>Choice <%= (i + 1) %> Divergence: <input type="number" class="form-control" name="choice<%= (i + 1) %>nextDivergence" placeholder="Path to next page"></label>
             <label>Choice <%= (i + 1) %> Page: <input type="number" class="form-control" name="choice<%= (i + 1) %>nextPage" placeholder="Path to next page"></label>
             <hr>
