--- a/views/nodvel.ejs
+++ b/views/nodvel.ejs
@@ -77,7 +77,7 @@
     </form>
     <br>
 <% } else { %>
-    <a href="/writenodvel/rewrite/<%= contents.title %>" style="float: left;" class="btn btn-primary">Change simple info</a>
+    <a href="/writenodvel/simpleinfo/rewrite/<%= contents.title %>" style="float: left;" class="btn btn-primary">Change simple info</a>
     <a href="/writenodvel/upload/<%= contents.title %>" style="float: left" class="btn btn-info">Upload</a>
     <form action="/nodvel/<%= contents.title %>" method="post">
         <select name="end" style="display: none;">
